Comment on all the stuff I'd like to update in the first round of changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <!-- TEMP remove unused strings -->
     <string name="app_name">WeatherChallenge</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
